--- a/Source/Readers/ReaderLib/ReaderLib.vcxproj
+++ b/Source/Readers/ReaderLib/ReaderLib.vcxproj
@@ -86,6 +86,7 @@
     <ClInclude Include="MemoryProvider.h" />
     <ClInclude Include="Reader.h" />
     <ClInclude Include="ReaderShim.h" />
+    <ClInclude Include="SubstitutingMemoryProvider.h" />
     <ClInclude Include="Transformer.h" />
   </ItemGroup>
   <ItemGroup>
