--- a/Tests/UnitTests/ReaderTests/ReaderTests.vcxproj
+++ b/Tests/UnitTests/ReaderTests/ReaderTests.vcxproj
@@ -127,11 +127,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>$(BOOST_LIB_PATH);$(OutDir)..\;</AdditionalLibraryDirectories>
-<<<<<<< HEAD
-      <AdditionalDependencies>htkmlfreader.lib;Math.lib;ReaderLib.lib;%(AdditionalDependencies)</AdditionalDependencies>
-=======
-      <AdditionalDependencies>newhtkmlfreader.lib;Math.lib;%(AdditionalDependencies)</AdditionalDependencies>
->>>>>>> 123946d... WIP HTKMLF reader
+      <AdditionalDependencies>newhtkmlfreader.lib;Math.lib;ReaderLib.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="!$(UsesCuda)">
