Add LegacyBlockRandomizer.{cpp,h} from old branch to make unit test pass

--- a/Source/Readers/ReaderLib/ReaderLib.vcxproj
+++ b/Source/Readers/ReaderLib/ReaderLib.vcxproj
@@ -75,6 +75,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="DataDeserializerBase.h" />
+    <ClInclude Include="LegacyBlockRandomizer.h" />
     <ClInclude Include="TransformerBase.h" />
     <ClInclude Include="BlockRandomizer.h" />
     <ClInclude Include="NoRandomizer.h" />
@@ -91,6 +92,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BlockRandomizer.cpp" />
+    <ClCompile Include="LegacyBlockRandomizer.cpp" />
     <ClCompile Include="NoRandomizer.cpp" />
     <ClCompile Include="SampleModePacker.cpp" />
     <ClCompile Include="ReaderShim.cpp" />
