Move E2E tests for ExperimentalHtkmlfReader

--- a/Tests/EndToEndTests/Speech/ExperimentalHtkmlfReader/DNN/DiscriminativePreTraining/testcases.yml
+++ b/Tests/EndToEndTests/Speech/ExperimentalHtkmlfReader/DNN/DiscriminativePreTraining/testcases.yml
@@ -1,4 +1,4 @@
-dataDir: ../../Data
+dataDir: ../../../Data
 tags:
      # BUGBUG: Temporarily disabling this test on the CPU since in Jenkins
      # we have some old machines with CPUs without AVX and when this test runs on these
