--- a/Tests/EndToEndTests/Speech/ExperimentalHtkmlfReader/DNN/ParallelNoQuantizationBufferedAsyncGradientAggregation/testcases.yml
+++ b/Tests/EndToEndTests/Speech/ExperimentalHtkmlfReader/DNN/ParallelNoQuantizationBufferedAsyncGradientAggregation/testcases.yml
@@ -1,9 +1,9 @@
 dataDir: ../../../Data
 tags:
-     # running for 1bitsgd build SKU on every BVT job in 'S' (Speech) leg in Debug-GPU and Release-CPU configurations:
-     - bvt-s  (build_sku == '1bitsgd') and ((flavor=='debug') ^ (device=='cpu'))
-     # running for 1bitsgd build SKU  on every Nightly job in 'S' leg
-     - nightly-s (build_sku == '1bitsgd')
+     # running on every BVT job in 'S' (Speech) leg in Debug-GPU and Release-CPU configurations:
+     - bvt-s  ((build_sku == 'gpu') or (build_sku == '1bitsgd')) and ((flavor=='debug') ^ (device=='cpu'))
+     # running unconditionally on every Nightly job in 'S' leg
+     - nightly-s ((build_sku == 'gpu') or (build_sku == '1bitsgd'))
 
 testCases:
   Must train epochs in exactly same order and parameters for each MPI Rank:
@@ -19,7 +19,7 @@ testCases:
       - Finished Epoch[{{integer}} of {{integer}}]
       - TrainLossPerSample = {{float,tolerance=0%}}
       - EvalErrPerSample = {{float,tolerance=0%}}
-      - AvgLearningRatePerSample = {{float,tolerance=0.001%}}
+      - AvgLearningRatePerSample = {{float,tolerance=0%}}
 
   Per-minibatch training results must match for each MPI Rank:
     patterns:
@@ -36,5 +36,6 @@ testCases:
       - DataParallelSGD training
       - MyRank = {{integer}}
       - NumNodes = 3
-      - NumGradientBits = 1
+      - NumGradientBits = 64
       - distributed reading is ENABLED
+      - BufferedAsyncGradientAggregation is ENABLED
