--- a/Source/Readers/ExperimentalHTKMLFReader/ExperimentalHTKMLFReader.vcxproj
+++ b/Source/Readers/ExperimentalHTKMLFReader/ExperimentalHTKMLFReader.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{7B7A51ED-AA8E-4660-A805-D50235A02120}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>NewHTKMLFReader</RootNamespace>
+    <RootNamespace>ExperimentalHTKMLFReader</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Label="Configuration">
