--- a/Tests/UnitTests/ReaderTests/ReaderTests.vcxproj.filters
+++ b/Tests/UnitTests/ReaderTests/ReaderTests.vcxproj.filters
@@ -33,6 +33,7 @@
     <ClCompile Include="..\..\..\Source\Common\ExceptionWithCallStack.cpp">
       <Filter>Common</Filter>
     </ClCompile>
+    <ClCompile Include="ImageReaderTests.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Common">
